@@ -1,3 +1,11 @@
+2001-12-18  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 02669] delete cURLcode()
+	* main.c (cURLcode): deleted
+	* main.c (loadNormalBuf): no need to use cURLcode()
+	* main.c (followI): ditto
+	* main.c (query_from_followform): need conv_form_encoding()
+
 2001-12-18  Rin Okuyama <okuyama@cna.ne.jp>
 
 	* [w3m-dev 02668] install-sh: -e option of sh(1)
@@ -1271,4 +1279,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.133 2001/12/17 15:42:44 ukai Exp $
+$Id: ChangeLog,v 1.134 2001/12/17 15:54:14 ukai Exp $
